<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/shaker_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:gravity="center"
        android:stretchColumns="0,1,2">

        <TableRow>

            <TextView
                android:id="@+id/current_Player_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Current Player:"
                android:gravity="center"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/current_Round_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Current round:"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/shakes_left_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Left Shakes:"
                android:textStyle="bold"></TextView>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/current_Player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Current Player"></TextView>

            <TextView
                android:id="@+id/current_Round"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Current round"></TextView>

            <TextView
                android:id="@+id/shakes_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Left Shakes"></TextView>

        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <TableRow>

            <ImageView
                android:id="@+id/imageViewDice1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:src="@drawable/dice1" />

            <ImageView
                android:id="@+id/imageViewDice2"
                android:layout_width="80dp"
                android:layout_margin="10dp"
                android:layout_height="80dp"
                android:clickable="true"
                android:src="@drawable/dice2" />
        </TableRow>

        <TableRow>

            <ImageView
                android:id="@+id/imageViewDice3"
                android:layout_margin="10dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:clickable="true"
                android:src="@drawable/dice3" />

            <ImageView
                android:id="@+id/imageViewDice4"
                android:layout_margin="10dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:clickable="true"
                android:src="@drawable/dice4"></ImageView>
        </TableRow>

        <TableRow>

            <ImageView
                android:id="@+id/imageViewDice5"
                android:layout_margin="10dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:clickable="true"
                android:src="@drawable/dice5" />
        </TableRow>
    </TableLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="experience +"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginRight="20dp"></TextView>

        <ToggleButton
            android:id="@+id/experience_plus_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></ToggleButton>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save"
            android:layout_width="62dp"
            android:layout_height="36dp"
            android:text="Save"></Button>

        <ImageButton
            android:id="@+id/shake_Button"
            style="@android:style/Widget.ImageButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/dice"></ImageButton>

        <Button
            android:id="@+id/load"
            android:layout_width="62dp"
            android:layout_height="36dp"
            android:text="Load"></Button>

    </LinearLayout>


</LinearLayout>