...
                android:textStyle="bold"></TextView>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_aces"
                android:text="Aces"></Button>

            <TextView
                android:id="@+id/player_one_aces"
                android:layout_column="1"
                android:gravity="center"
                android:text="0"
...
